...
            android:freezesText="true"
            android:ems="10"
            android:hint="Email"

            android:inputType="textEmailAddress">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_email"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginHorizontal="20sp"
            android:freezesText="true"
            android:ems="10"
            android:hint="Password"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:textColor="@color/colorText"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

...
                android:textColor="@color/colorText"
                android:text="@string/contact_support" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"

            android:textSize="30dp"
            android:clickable="true"
...
