<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/reminderactivity"
    android:background="@color/bgColorMain"
    android:layout_height="match_parent"
    tools:context=".ReminderModule.ReminderActivity">
<androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
...
                />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addReminder_Btn"
            android:layout_margin="24sp"
            android:elevation="3sp"
            android:outlineSpotShadowColor="@color/colorText"
            android:layout_gravity="right|bottom"
            app:srcCompat="@drawable/add"
            />
...
