<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/mainactivity"

        android:layout_height="match_parent"
        tools:context=".MainModule.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <GridLayout
                android:layout_width="wrap_content"
                android:rowCount="2"
                android:layout_gravity="center"
                android:padding="20sp"
                android:columnCount="2"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"                android:layout_width="wrap_content"
                        android:src="@drawable/calendar"
                        android:id="@+id/calendar_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calendarevents"
                        android:layout_gravity="center"
                        android:textColor="@color/colorText">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="20sp"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"                    android:layout_width="wrap_content"
                        android:src="@drawable/alarm"
                        android:id="@+id/alarm_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder"
                        android:layout_gravity="center"
                        android:textColor="@color/colorText">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"
                        android:layout_width="wrap_content"
                        android:src="@drawable/information"
                        android:id="@+id/profile_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profilepage"
                        android:textColor="@color/colorText">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"                    android:layout_width="wrap_content"
                        android:src="@drawable/gear"
                        android:id="@+id/settings_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:layout_gravity="center"
                        android:textColor="@color/colorText">
                    </TextView>

                </LinearLayout>



            </GridLayout>
            <!--    <ScrollView-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_margin="20sp"-->
            <!--        android:padding="20sp"-->
            <!--        android:layout_height="wrap_content">-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:text="@string/importantreminders"
                    android:textSize="20sp"/>




            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/important_reminder_container"/>




            <!--    </ScrollView>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_gravity="bottom"
                    android:spinnerMode="dialog"
                    android:popupElevation="3sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_login_language"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/change_lan_btn"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"/>
            </LinearLayout>
        </LinearLayout>



    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>
