...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorMain"
    android:orientation="vertical"
    android:id="@+id/settingsactivity"
    tools:context=".SettingsModule.SettingsActivity">


    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
